--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -18,8 +18,15 @@
   padding: 20px 10px;
 }
 
+
+
 .Item-actions {
   display: flex;
   justify-content: flex-end;
   padding: 20px 20px 20px 10px;
 }
+
+.Item-price {
+  padding: 20px 10px;
+}
+
