--- a/src/components/page-layout/style.css
+++ b/src/components/page-layout/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background: #535353;
-  font-family: sans-serif;
+  font-family: Arial, serif;
 }
 
 .PageLayout {
@@ -12,4 +12,15 @@ body {
   background: #fff;
   box-sizing: border-box;
   box-shadow: 0 0 15px 5px #0000003b;
+  position: relative;
+}
+
+.button_pointer:hover {
+  cursor: pointer;
+}
+
+@media (max-width: 1025px) {
+  .PageLayout {
+    width: 100vw;
+  }
 }
